--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="preload" href="/public/static/bg.webp" as="image">
+    <link rel="preload" href="/public/static/profile.webp" as="image">
     <title>Songvut Nakrong | Personal Website</title>
   </head>
   <body>
